gcc/testsuite/rust/rustc/ui/parser/issues/isgg-invalid-outer-attttr-issue-127930.rs
#![allow(dead_code)]
fn foo() {}

#![feature(iter_array_chunks)] // { dg-error "" "" { target *-*-* } }
fn bar() {}

fn main() {
    foo();
    bar();
}

